# Cpp2020

Oving1/: CMakeLists.txt  mainA.cpp  mainB.cpp
Oving2/: CMakeLists.txt  Task4.cpp  Task5.cpp  Task6.cpp  main.cpp
Oving3/: CMakeLists.txt  main.cpp  task1.h  task3.h
Oving4/: CMakeLists.txt  Part1.h  Part2.h  main.cpp
Oving5/Oving5/: CMakeLists.txt  ChessBoard.h  DrawBoard.h  main.cpp
Oving6/: CMakeLists.txt  ChessBoard.h  DrawBoard.h  SimpleConnectionHandler.h  main.cpp
Oving7/fraction/: CMakeLists.txt  Set.hpp  fraction.cpp  fraction.hpp  main.cpp
Task8/: CMakeLists.txt  Part1.h  Part2.h  main.cpp
Task9/: CMakeLists.txt  main.cpp
